k8s/jupyterhub/templates/jupyterhub-middleware-auth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
  namespace: jupyterhub
spec:
  basicAuth:
    secret: authsecret
